--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -6,5 +6,6 @@
     <p><span>Description:</span>{{description}}</p>
     <p><span>Difficulty level:</span> {{difficultyLevel}}</p>
     <a class="btn" href="/">Back</a>
+    <a class="btn" href="/accessory/{{_id}}/attach">Attach</a>
   </div>
 </main>
