--- a/src/views/accessory/attach.hbs
+++ b/src/views/accessory/attach.hbs
@@ -3,17 +3,17 @@
     <div class="form">
         <h2>{{cube.name}}</h2>
         <img class="cube" src="{{cube.imageUrl}}">
-        <form action="" method="">
+        <form method="POST">
             <label for="accessory">Accessories</label>
             <select id="accessory" name="accessory" />
             {{#each accessories}}
-            <option value="Accessory 1">{{name}}</option>
+            <option value="{{_id}}">{{name}}</option>
             {{/each}}
-            </select
+            </select>
             <input type="submit" value="Attach">
         </form>
         <h3 class="italic">This cube has all available accessories so far or there is no available at all...
         </h3>
-        <a class="btn" href="/">Back</a>
+        <a class="btn" href="/cube/details/{{cube._id}}">Back</a>
     </div>
 </main>
