--- a/src/views/accessory/attach.hbs
+++ b/src/views/accessory/attach.hbs
@@ -4,16 +4,18 @@
         <h2>{{cube.name}}</h2>
         <img class="cube" src="{{cube.imageUrl}}">
         <form method="POST">
+            {{#if accessories}}
             <label for="accessory">Accessories</label>
             <select id="accessory" name="accessory" />
             {{#each accessories}}
             <option value="{{_id}}">{{name}}</option>
             {{/each}}
             </select>
-            <input type="submit" value="Attach">
+            <input type="submit" value="Attach" {{#unless accessories}}disabled{{/unless}}>
+            {{else}}
+            <h3 class="italic">This cube has all available accessories so far or there is no available at all...</h3>
+            {{/if}}
         </form>
-        <h3 class="italic">This cube has all available accessories so far or there is no available at all...
-        </h3>
         <a class="btn" href="/cube/details/{{cube._id}}">Back</a>
     </div>
 </main>
