--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -21,3 +21,7 @@
         </form>
     </div>
 </main>
+
+{{!-- <script>
+    document.getElementById('difficulty').value = {{cube.difficultyLevel}}
+</script> --}}
