Register validation added

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -11,11 +11,11 @@
 <body>
   <div class="container">
     <header>
-      <ul> 
+      <ul>
         <li><img class="logo" src="/static/images/logo.png"></li>
         <li><a href="/">Browse</a></li>
         <li><a href="/about">About</a></li>
-        
+
         {{#if user}}
         <li><a href="/cube/create">Add a Cube</a></li>
         <li><a href="/accessory/create">Add Accessory</a></li>
@@ -27,6 +27,12 @@
         {{/if}}
       </ul>
     </header>
+
+    {{#if error}}
+        <div id="notifications">
+          <p id="notification-message">{{error}}</p>
+        </div>
+    {{/if}}
 
     {{{body}}}
   </div>
